# docs/swagger.yaml
@@ -157,6 +157,21 @@ definitions:
       status:
         type: string
     type: object
+  domain.OrdersHistory:
+    properties:
+      id:
+        type: integer
+      newStatus:
+        type: string
+      oldStatus:
+        type: string
+      order:
+        $ref: '#/definitions/domain.Order'
+      orderId:
+        type: string
+      time:
+        type: string
+    type: object
   domain.RefreshTokenResponse:
     properties:
       accessToken:
@@ -565,10 +580,6 @@ paths:
           description: No Content
           schema:
             $ref: '#/definitions/domain.SuccessResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/domain.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -775,6 +786,24 @@ paths:
           schema:
             $ref: '#/definitions/domain.ErrorResponse'
       summary: Delete an order
+      tags:
+      - Orders
+  /order/history:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.OrdersHistory'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/domain.ErrorResponse'
+      summary: Get all orders history
       tags:
       - Orders
   /order/new:
